added deploy.js and readme. Update to testing asertions and deployment script using infura provider

--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ganache": "^7.7.4",
+    "mocha": "^10.2.0",
     "solc": "^0.4.17",
-    "test": "^3.2.1"
+    "test": "^3.2.1",
+    "truffle-hdwallet-provider": "^0.0.3",
+    "web3": "^1.0.0-beta.26"
   }
 }
